<resources>
    <string name="app_name">BTConn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">BTConn</string>
    <string name="nav_header_subtitle">Lemoe.cn presents</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_connection">Connection</string>

    <string name="fab_connect">Connect</string>

    <string name="terminal_hint">Input the data here</string>

    <string name="menu_home">Home</string>
    <string name="menu_charts">Charts</string>
    <string name="menu_terminal">Terminal</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="webview_waiting_for_connection">Waiting for device connection...</string>
</resources>