<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@drawable/ic_chart"
            android:title="@string/menu_charts" />
        <item
            android:id="@+id/nav_terminal"
            android:icon="@drawable/terminal"
            android:title="@string/menu_terminal" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/info"
            android:title="@string/menu_about" />
    </group>
</menu>